--- a/web/frontend/App.css
+++ b/web/frontend/App.css
@@ -2,3 +2,8 @@
 .collapsible-container:hover{
     cursor: pointer;
 }
+.productLineItem{
+    padding: 10px;
+    box-shadow: 5px 5px 12px -1px gray;
+    border-radius: 5px;
+}
